--- a/animals.html
+++ b/animals.html
@@ -14,6 +14,7 @@
   <meta name="author" content="themefisher.com">
   <meta name="description" content="favorites">
   <meta name="keywords" content="owl, octopus">
+  <title>Favorite Animals</title>
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
