--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta name="theme-name" content="orbitor-bulma" />
 
   <title>Smiley's World</title>
+  <title>Main Page</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/image/favicon/favicon-32x32.png" />
@@ -127,10 +128,14 @@
 				<div class="block">
 					<span class="is-uppercase text-sm letter-spacing ">Welcome to my site</span>
 					<h1 class="my-4">Get to know me a little better</h1>
-					<p class="mb-6">My name is Machelle Smiley. I am a 38 year old single mom to my 8 year old daughter, Zella. I currently
-						work for the County in the Assessors office. I am working on my degree in hopes of promoting and building
-						a better life for me and my daughter. I took web development in order to learn how to build a page just like this one. 
-						I hope you check out the rest of the links and learn about what makes me, me. 
+					<p class="mb-6">My name is Machelle Smiley. I am a 38-year-old single mom to my 8-year-old daughter, Zella. 
+						I currently work for the County in the Assessor’s office. I am actively working on my degree in hopes of 
+						promoting and building a better life for me and my daughter. Motherhood is a blessing I never knew I needed. 
+						My daughter pushes me to be a better person in every way. I love hanging out with her. We go on day trips to 
+						the beach a lot. We like hanging out at the Zoo. She like to watch Bob Ross with me, this is a parenting win 
+						in my book. We like being in nature and spending time together. I have a solid support system in my life. 
+						From my parents, family, to my friends, I am very blessed. I never take this for granted. I hope you click 
+						through the links above and learn more about what makes me, me.  
 					</p>
 				</div>
 			</div>
@@ -138,294 +143,6 @@
 	</div>
 </section>
 
-<section class="section process">
-	<div class="container">
-		<div class="columns is-multiline is-desktop is-align-items-center">
-			<div class="column is-5-desktop">
-				<div class="process-block pl-4">
-					<span class="is-uppercase text-sm letter-spacing">Why choose us</span>
-					<h2 class="mb-4 mt-3">We help you to make work easy</h2>
-					<p class="mb-4">We understand what your business means to you,your requirements considering trends.Smet nemo excepturi voluptas eligendi .</p>
-				</div>
-			</div>
-
-			<div class="column is-7-desktop">
-				<div class="columns is-multiline custom-grid">
-					<div class="column is-6-widescreen is-6-tablet">
-						<div class="icon-block has-text-centered">
-							<i class="ti-light-bulb"></i>
-							<h5>Data analysis</h5>
-							<p>A complete web app solution for business</p>
-						</div>
-					</div>
-
-					<div class="column is-6-widescreen is-6-tablet pb-0">
-						<div class="icon-block has-text-centered mt-30">
-							<i class="ti-panel"></i>
-							<h5>Web Development</h5>
-							<p>A complete web app solution for business</p>
-						</div>
-					</div>
-
-					<div class="column is-6-widescreen is-6-tablet pt-0">
-						<div class="icon-block has-text-centered">
-							<i class="ti-search"></i>
-							<h5>Content Mangement</h5>
-							<p>A complete web app solution for business</p>
-						</div>
-					</div>
-
-					<div class="column is-6-widescreen is-6-tablet pt-0">
-						<div class="icon-block has-text-centered mt-30">
-							<i class="ti-rocket"></i>
-							<h5>Mobility</h5>
-							<p>A complete web app solution for business</p>
-						</div>
-					</div>
-				</div>
-			</div>	
-		</div>
-	</div>
-</section>
-<!-- section portfolio start -->
-<section class="section portfolio pb-0">
-	<div class="container">
-		<div class="columns">
-			<div class="column is-8-desktop">
-				<div class="heading">
-					<h2 class="mb-5">We’ve Done Lot’s of Work, Let’s Check Some From Here</h2>
-					<p>We have the best experts to elevate your business to the next level, try is and you will see! We have the best experts to elevate your </p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid">
-		<div class="columns is-desktop portfolio-gallery">
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/1.jpg" alt="" class="w-100">
-						<div class="overlay-item"><i class="ti-link"></i></div>
-
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/2.jpg" alt="" class="w-100">
-						<div class="overlay-item">
-							<i class="ti-link"></i>
-						</div>
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/3.jpg" alt="" class="w-100">
-
-						<div class="overlay-item">
-							<i class="ti-link"></i>
-						</div>
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/4.jpg" alt="" class="w-100">
-
-						<div class="overlay-item">
-							<i class="ti-link"></i>
-						</div>
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/5.jpg" alt="" class="w-100">
-
-						<div class="overlay-item">
-							<i class="ti-link"></i>
-						</div>
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-desktop">
-				<div class="portflio-item is-relative mb-4">
-					<a href="project-details.html">
-						<img src="images/portfolio/6.jpg" alt="" class="w-100">
-
-						<div class="overlay-item">
-							<i class="ti-link"></i>
-						</div>
-						<div class="portfolio-item-content">
-							<h3 class="mb-0 text-white">Project california</h3>
-							<p class="text-white-50">Web Development</p>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- section portfolio END -->
-<!-- section Counter Start -->
-<section class="section counter">
-	<div class="container">
-		<div class="columns is-multiline">
-			<div class="column is-3-widescreen is-6-desktop">
-				<div class="counter-item has-text-centered">
-					<h2 class="mb-0"><span class="counter-stat font-weight-bold">1730</span> +</h2>
-					<p>Project Done</p>
-				</div>
-			</div>
-			<div class="column is-3-widescreen is-6-desktop">
-				<div class="counter-item has-text-centered">
-					<h2 class="mb-0"><span class="counter-stat font-weight-bold">125 </span>M </h2>
-					<p>User Worldwide</p>
-				</div>
-			</div>
-			<div class="column is-3-widescreen is-6-desktop">
-				<div class="counter-item has-text-centered">
-					<h2 class="mb-0"><span class="counter-stat font-weight-bold">39</span></h2>
-					<p>Availble Country</p>
-				</div>
-			</div>
-			<div class="column is-3-widescreen is-6-desktop">
-				<div class="counter-item has-text-centered">
-					<h2 class="mb-0"><span class="counter-stat font-weight-bold">14</span></h2>
-					<p>Award Winner </p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- section Counter End  -->
-<section class="section testimonial">
-	<div class="container">
-		<div class="columns is-desktop">
-			<div class="column is-8-desktop">
-				<div class="heading">
-					<h2 class="mb-5">What they say about us</h2>
-					<p>They are truely amazing in the industry ,molestiae expedita aspernatur officia, similique minima laudantium. Corrupti ipsa perspiciatis commodi nesciunt rerum mollitia enim voluptate!</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid">
-		<div class="columns is-multiline">
-			<div class="column is-12 testimonial-wrap">
-				<div class="testimonial-block">
-					<p>
-						Maiores quasi placeat harum itaque, ducimus cumque quas expedita hic. Qui ullam iste provident mollitia expedita facilis fuga repellat.
-					</p>
-
-					<div class="client-info is-flex is-align-items-center">
-						<div class="client-img">
-							<img src="images/team/testimonial1.jpg" alt="" class="w-100">
-						</div>
-						<div class="info">
-							<h6>John Partho</h6>
-							<span>Newyork USA</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="testimonial-block">
-					<p>
-						Maiores quasi placeat harum itaque, ducimus cumque quas expedita hic. Qui ullam iste provident mollitia expedita facilis fuga repellat.
-					</p>
-
-					<div class="client-info is-flex is-align-items-center">
-						<div class="client-img">
-							<img src="images/team/testimonial2.jpg" alt="" class="w-100">
-						</div>
-						<div class="info">
-							<h6>John Partho</h6>
-							<span>Newyork USA</span>
-						</div>
-					</div>
-				</div>
-				<div class="testimonial-block">
-					<p>
-						Maiores quasi placeat harum itaque, ducimus cumque quas expedita hic. Qui ullam iste provident mollitia expedita facilis fuga repellat.
-					</p>
-
-					<div class="client-info is-flex is-align-items-center">
-						<div class="client-img">
-							<img src="images/team/testimonial1.jpg" alt="" class="w-100">
-						</div>
-						<div class="info">
-							<h6>John Partho</h6>
-							<span>Newyork USA</span>
-						</div>
-					</div>
-				</div>
-				<div class="testimonial-block">
-					<p>
-						Maiores quasi placeat harum itaque, ducimus cumque quas expedita hic. Qui ullam iste provident mollitia expedita facilis fuga repellat.
-					</p>
-
-					<div class="client-info is-flex is-align-items-center">
-						<div class="client-img">
-							<img src="images/team/testimonial2.jpg" alt="" class="w-100">
-						</div>
-						<div class="info">
-							<h6>John Partho</h6>
-							<span>Newyork USA</span>
-						</div>
-					</div>
-				</div>
-				<div class="testimonial-block">
-					<p>
-						Maiores quasi placeat harum itaque, ducimus cumque quas expedita hic. Qui ullam iste provident mollitia expedita facilis fuga repellat.
-					</p>
-
-					<div class="client-info is-flex is-align-items-center">
-						<div class="client-img">
-							<img src="images/team/testimonial1.jpg" alt="" class="w-100">
-						</div>
-						<div class="info">
-							<h6>John Partho</h6>
-							<span>Newyork USA</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
 
 <!-- footer Start -->
 <footer class="footer section">
