--- a/nieces.html
+++ b/nieces.html
@@ -147,7 +147,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/varietyoffoods.jpg" alt="" class="w-75" height="125">
+					<img src="image/family/ellaandkaitlyn.jpeg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
@@ -156,7 +156,7 @@
 					<h3 class="text-md mb-5 mt-3">
 						Meet Kaitlyn and Ella
 					</h3> 
-					<p>My nieces are super cute and equally as talented. My nieces are some of my favorite people. 
+					<p>My nieces are super cute and equally as talented. They of my favorite people. 
 						They have so much to offer the world. Kaitlyn is the oldest at 20 years old, Ella is 10. 
 						They are both so unique. Kaitlyn is an old soul. She loves Elvis and has since she was little. 
 						She is one of the best people to call if you’re in trouble or going through something tough. 
@@ -172,18 +172,18 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Italian</span>
+						<span class="text-color has-text-weight-bold">Oldest Niece</span>
 						<h3 class="text-md mb-5 mt-3">
-							Pasta Goodness
+							Kaitlyn
 						</h3>
-						<p>One of my favorite dishes is pasta. My favorite is from Cheesecake Factory. They serve the Four Cheese Pasta. *Chefs Kiss*
+						<p>
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/food/pasta.jpg" alt="" width="500" height="222">
+						<img src="image/family/kaitlyn.jpeg" alt="" width="500" height="222">
 					</div>
 				</div>
 			</div>
@@ -192,18 +192,16 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/dragon.jpg" alt="" class="w-100">
+					<img src="image/family/ella.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Japanese</span>
+					<span class="text-color has-text-weight-bold">Youngest Niece</span>
 					<h3 class="text-md mb-5 mt-3">
-						Sushi Rolls
+						Ella
 					</h3>
-					<p>Another food that is at the top of my list is sushi. Its light, 
-						refreshing, and not half bad for you. The Dragon Roll is always 
-						a favorite!</p>
+					<p></p>
 				</div>
 			</div>
 		</div>
