--- a/family.html
+++ b/family.html
@@ -9,12 +9,9 @@
 
 <html lang="zxx">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
-  <meta name="author" content="themefisher.com">
   <meta name="description" content="family main">
   <meta name="keywords" content="family introduction, meet my family">
-  
+  <title>Meet my family</title>
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
