--- a/motorcycle.html
+++ b/motorcycle.html
@@ -9,11 +9,9 @@
 
 <html lang="zxx">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
-  <meta name="author" content="themefisher.com">
   <meta name="description" content="Goals">
   <meta name="keywords" content="learn to ride motorcycle">
+  <title>Motorcycle</title>
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
