--- a/nieces.html
+++ b/nieces.html
@@ -9,11 +9,9 @@
 
 <html lang="zxx">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
-  <meta name="author" content="themefisher.com">
   <meta name="description" content="family">
   <meta name="keywords" content="kaitlyn, ella, nieces">
+  <title>Nieces</title>
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
