--- a/contact.html
+++ b/contact.html
@@ -176,11 +176,11 @@
                      <ul class="list-unstyled">
                          <li>
                             <h5>Call Me</h5>
-                            867-5309
+                            559*123*4556
                         </li>
                         <li>
                             <h5>Email me</h5>
-                            fakeemail@gmail.com
+                            email@emaildomain
                         </li>
                         <li>
                             <h5>Location</h5>
