--- a/animals.html
+++ b/animals.html
@@ -210,7 +210,7 @@
 			</div>
 			<div class="column is-2-widescreen is-6-desktop is-6-tablet ml-auto">
 				<div class="widget">
-					<h4 class="is-capitalize mb-4">Home</h4>
+					<h4 class="is-capitalize mb-4"></h4>
 				</div>
 			</div>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
