--- a/people.html
+++ b/people.html
@@ -239,28 +239,7 @@
 			</div>
 			<div class="column is-2-widescreen is-6-desktop is-6-tablet ml-auto">
 				<div class="widget">
-					<h4 class="is-capitalize mb-4">Home</h4>
-
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="index.html">About</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
-				<div class="widget">
-					<h4 class="is-capitalize mb-4">Support</h4>
-
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="#">FAQ</a></li>
-					</ul>
-				</div>
-			</div>
+					<h4 class="is-capitalize mb-4"></h4>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
 				<div class="widget widget-contact">
 					<h4 class="is-capitalize mb-4">Get in Touch</h4>
